tests/aster/x/mochi/rosetta/function-frequency.error
error[A024]: unknown function substring
  --> /workspace/mochi/tests/rosetta/x/Mochi/function-frequency.mochi:105:14

105 |     let ch = substring(src, i, i+1)
    |              ^

help:
  Declare substring before use
